<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/voicemail"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <com.android.phone.settings.VoicemailProviderListPreference android:persistent="true" android:title="@string/voicemail_provider" android:key="button_voicemail_provider_key" android:summary="@string/sum_voicemail_choose_provider" android:defaultValue="" />
    <PreferenceScreen android:persistent="false" android:title="@string/voicemail_settings" android:key="button_voicemail_setting_key">
        <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/voicemail_settings_number_label" android:key="button_voicemail_key" android:dialogTitle="@string/voicemail" phone:confirmMode="confirm" />
    </PreferenceScreen>
    <com.android.phone.settings.VoicemailRingtonePreference android:persistent="false" android:title="@string/voicemail_notification_ringtone_title" android:key="@string/voicemail_notification_ringtone_key" android:ringtoneType="notification" />
    <CheckBoxPreference android:persistent="true" android:title="@string/voicemail_notification_vibrate_when_title" android:key="@string/voicemail_notification_vibrate_key" />
    <SwitchPreference android:title="@string/voicemail_visual_voicemail_switch_title" android:key="@string/voicemail_visual_voicemail_key" />"
</PreferenceScreen>