<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <com.android.xuicallsetting.XPreference android:persistent="false" android:title="@string/labelCF" android:key="pref_call_forward_key" />
    <SwitchPreference android:persistent="false" android:title="@string/labelCW" android:key="button_cw_cdma_key" />
    <com.android.phone.CallWaitingCheckBoxPreference android:persistent="false" android:enabled="false" android:title="@string/labelCW" android:key="button_cw_key" />
    <PreferenceScreen android:persistent="false" android:title="@string/labelCB" android:key="button_cb_expand_key" android:widgetLayout="@xml/x_preference_widget">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallBarOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/voicemail" android:key="button_voicemail_category_key" android:widgetLayout="@xml/x_preference_widget">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.VoiceMailSetting" />
    </PreferenceScreen>
    <com.android.phone.CLIRListPreference android:persistent="false" android:enabled="false" android:entries="@array/clir_display_values" android:title="@string/labelCallerId" android:key="button_clir_key" android:summary="@string/sum_loading_settings" android:defaultValue="DEFAULT" android:dialogTitle="@string/labelCallerId" android:entryValues="@array/clir_values" />
    <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn_key" android:widgetLayout="@xml/x_preference_widget">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.FdnSetting" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelGSMMore" android:key="button_gsm_more_expand_key" android:summary="@string/sum_gsm_call_settings" android:widgetLayout="@xml/x_preference_widget">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCDMAMore" android:key="button_cdma_more_expand_key" android:summary="@string/sum_cdma_call_settings" android:widgetLayout="@xml/x_preference_widget">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CdmaCallOptions" />
    </PreferenceScreen>
</PreferenceScreen>