<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:persistent="false" android:title="@string/voicemail" android:key="button_voicemail_category_key" android:widgetLayout="@xml/x_preference_widget"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <ListPreference android:persistent="true" android:title="@string/voicemail_provider" android:key="button_voicemail_provider_key" android:summary="@string/sum_voicemail_choose_provider" android:widgetLayout="@xml/x_preference_widget" android:defaultValue="" />
    <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/voicemail_settings_number_label" android:key="button_voicemail_key" android:widgetLayout="@xml/x_preference_widget" android:dialogTitle="@string/voicemail" phone:confirmMode="confirm" />
    <PreferenceCategory />
</PreferenceScreen>